--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -8,12 +8,8 @@ mixin header()
 				.site-logo
 					+icon("brain")
 					.site-logo-text
-						h1 The Open Brain Project
-						h2.tagline 
-							.tagline-item Translating discovery into care
-							.tagline-item Learn, discover, translate
-							.tagline-item Better prediction through understanding  
-							.tagline-item Big data, one brain at a time
+						h1.site-title The Open Brain Project
+						h2.site-tagline Translating discovery into care
 			.right-header-content
 				a.header-social-link(href="https://twitter.com", aria-label="Open Brain Project on Twitter")
 					+icon("twitter")
