--- a/src/jade/join/success/index.jade
+++ b/src/jade/join/success/index.jade
@@ -4,7 +4,7 @@ include ../../_partials/_svg
 include ../../_partials/_icon
 include ../../_partials/_footer
 
-+head("Successful submission")
++head("Success")
 body.join-page
 	+header()
 	section.page-hero
