--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -41,14 +41,15 @@ body.join-page
 							| Clinician
 						label.checkbox-wrapper
 							input(type="checkbox", id="patient_or_family", name="i_am_a")
-							| A patient or a family member or a patient
+							| A patient or a family member of a patient
 						label.checkbox-wrapper
 							input(type="checkbox", id="just_interested", name="i_am_a")
 							| Simply interested to learn more
-					section.split
+					section
 						label
-							| Institutional Affiliation:
+							| Institutional Affiliation (if applicable):
 							input(type="text", name="institutional_affiliation")
+					section
 						label
 							| Country:
 							input(type="text", name="country")
