--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -605,6 +605,7 @@ header {
 	color: $white;
 	padding: var(--extra-large) 0 6rem;
 	overflow: hidden;
+	text-shadow: 0 1px 2px rgba($black, 0.5);
 
 	.wrapper {
 		position: relative;
@@ -628,7 +629,7 @@ header {
 	width: auto;
 	height: 150%;
 	transform: scaleX(-1);
-	opacity: 0.15;
+	opacity: 0.2;
 }
 
 .brain-graphic circle {
@@ -644,7 +645,7 @@ header {
 @for $i from 1 through 30 {
 	.brain-graphic circle:nth-of-type(#{$i}) {
 		animation: pulse 5s ease-in-out infinite;
-		animation-delay: 0.3s * $i;
+		animation-delay: 0.15s * $i;
 	}
 }
 
@@ -668,7 +669,6 @@ header {
 
 	@media (min-width: $tablet) {
 		width: 50%;
-		// max-width: 25em;
 	}
 }
 
