--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -20,22 +20,28 @@ main.page-content
 					* [New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
 				h3 A new technique for localizing music in the brain during brain surgery
 				:marked
-					* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
 					* [NPR Health: This music teacher played his saxophone while in brain surgery](http://www.npr.org/sections/health-shots/2017/08/25/545710598/this-music-teacher-played-his-saxophone-while-in-brain-surgery)
-					* [Democrat and Chronicle: Still on operating table, patient plays sax to show surgery was success](http://www.democratandchronicle.com/story/news/2017/09/02/saxophone-solo-after-brain-surgery-signal-success-rochester/626876001/)
-					* [People Magazine: Music teacher played his sax during brain surgery after surgeons save his music function](http://people.com/bodies/music-teacher-plays-saxophone-during-brain-surgery/)
-					* [Facebook Seeker: This music teacher is undergoing brain surgery while playing the saxophone](http://www.facebook.com/SeekerMedia/videos/10155327361953387/)
 					* [NBC Health News: Musician plays sax during brain tumor surgery](http://www.nbcnews.com/health/health-news/musician-plays-sax-during-brain-tumor-surgery-n796971)
-					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
+				details
+					summary Show more
+					:marked
+						* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
+						* [Democrat and Chronicle: Still on operating table, patient plays sax to show surgery was success](http://www.democratandchronicle.com/story/news/2017/09/02/saxophone-solo-after-brain-surgery-signal-success-rochester/626876001/)
+						* [People Magazine: Music teacher played his sax during brain surgery after surgeons save his music function](http://people.com/bodies/music-teacher-plays-saxophone-during-brain-surgery/)
+						* [Facebook Seeker: This music teacher is undergoing brain surgery while playing the saxophone](http://www.facebook.com/SeekerMedia/videos/10155327361953387/)
+						* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
 				h3 Predicting vision recovery after brain tumor removal
 				:marked
 					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
 					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
 				h3 From a stroke to a PhD in 12 years
 				:marked
-					* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
-					* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
 					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
+				details
+					summary Show More
+					:marked
+						* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
+						* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
 				h3 URMC neurosurgery resident wins Cadbury Award
 				:marked
 					* [Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
