--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -38,7 +38,7 @@ main.page-content
 				:marked
 					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
 				details
-					summary Show More
+					summary Show more
 					:marked
 						* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
 						* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
