--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -23,14 +23,14 @@ body.join-page
 					section.split
 						label
 							| First Name:
-							input(type="text", name="first_name")
+							input(type="text", name="first_name", required)
 						label
 							| Last Name:
-							input(type="text", name="last_name")
+							input(type="text", name="last_name", required)
 					section
 						label
 							| Your Email:
-							input(type="email", name="email")
+							input(type="email", name="email", required)
 					section.i-am
 						| I am a:
 						label.checkbox-wrapper
