--- a/src/jade/brainsurvey/index.jade
+++ b/src/jade/brainsurvey/index.jade
@@ -8,8 +8,5 @@ include ../_partials/_footer
 body.discover-page.brainsurvey-page
 	+header()
 	main
-		//- .page-title
-		//- 	.container
-		//- 		h1 Brain Survey
-		iframe.bs-iframe(src="https://brainsurvey.org")
+		iframe.bs-iframe(src="https://brainsurvey.netlify.com/")
 	+footer()
