remove ugly theme color

--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -30,9 +30,9 @@ mixin head(pageTitle, pageDescription)
 			link(rel="mask-icon", href="../../_img/safari-pinned-tab.svg", color="#fa8072")
 			
 			// Web appification
-			meta(name="theme-color", content="#959ba6")
+			// meta(name="theme-color", content="#959ba6")
 			meta(name="application-name" content="Open Brain Project")
-			meta(name="msapplication-TileColor", content="#959ba6")
+			// meta(name="msapplication-TileColor", content="#959ba6")
 			meta(name="rating" content="General")
 			meta(name="mobile-web-app-capable", content="yes")
 
@@ -41,7 +41,7 @@ mixin head(pageTitle, pageDescription)
 
 			// Facebook meta
 			// meta(property="fb:app_id" content="123456789")
-			// meta(property="og:url" content="https://example.com/page.html")
+			meta(property="og:url" content="https://openbrainproject.org")
 			meta(property="og:type" content="website")
 			meta(property="og:title" content="The Open Brain Project")
 			// meta(property="og:image" content="https://example.com/image.jpg")
