remove ugly theme color

--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -44,8 +44,8 @@ mixin head(pageTitle, pageDescription)
 			meta(property="og:url" content="https://openbrainproject.org")
 			meta(property="og:type" content="website")
 			meta(property="og:title" content="The Open Brain Project")
-			// meta(property="og:image" content="https://example.com/image.jpg")
-			meta(property="og:image:alt" content="A description of what is in the image (not a caption)")
+			meta(property="og:image" content="https://openbrainproject.org/_img/screenshot_1080x864.png")
+			meta(property="og:image:alt" content="Screenshot of The Open Brain Project website")
 			meta(property="og:description" content="The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about how the human brain responds to and recovers from injury.")
 			meta(property="og:site_name" content="The Open Brain Project")
 			meta(property="og:locale" content="en_US")
@@ -55,8 +55,8 @@ mixin head(pageTitle, pageDescription)
 			meta(name="twitter:card" content="summary")
 			// meta(name="twitter:site" content="@site_account")
 			// meta(name="twitter:creator" content="@individual_account")
-			// meta(name="twitter:url" content="https://example.com/page.html")
+			meta(name="twitter:url" content="https://openbrainproject.org")
 			meta(name="twitter:title" content="The Open Brain Project")
 			meta(name="twitter:description" content="The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about how the human brain responds to and recovers from injury.")
-			// meta(name="twitter:image" content="https://example.com/image.jpg")
-			// meta(name="twitter:image:alt" content="A text description of the image conveying the essential nature of an image to users who are visually impaired. Maximum 420 characters.")
+			meta(name="twitter:image" content="https://openbrainproject.org/_img/screenshot_1080x864.png")
+			meta(name="twitter:image:alt" content="Screenshot of The Open Brain Project website")
