--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -30,7 +30,10 @@ body.home
 							p Explore the human brain
 				.featured-content-wrapper 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
-						img(src="_img/mapping_language_thumbnail.jpg", width="800", height="600", alt="Screenshot of Mapping Language video")
+						.video-block
+							.video-thumbnail(style="background-image: url(_img/mapping_language_thumbnail.jpg)")
+								.icon-youtube-wrapper
+									+icon("youtube")
 						.featured-meta
 							h2 
 								| Mapping language ability during awake brain surgery
