--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -3,6 +3,9 @@ include ./_svg
 mixin footer()
 	footer
 		.container
-			| <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a>
+			span.left
+				| Find us on <a href="http://facebook.com">Facebook</a> and <a href="https://twitter.com">Twitter</a>
+			span.right
+				<a href="/join" class="right"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a>
 	script(src="../_js/openbrainproject.js")
 	+svg()
