--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -40,11 +40,11 @@ mixin nav()
 								+icon("dchev")
 							ul.nav-subgroup
 								li.nav-item
-									a.nav-link(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx", target="_blank")
+									a.nav-link(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx", target="_blank", rel="noopener")
 										span University of Rochester Neurosurgery
 										+icon("external")
 								li.nav-item
-									a.nav-link(href="https://www.upmc.com/Services/neurosurgery", target="_blank")
+									a.nav-link(href="https://www.upmc.com/Services/neurosurgery", target="_blank", rel="noopener")
 										span University of Pittsburgh Neurosurgery
 										+icon("external")
 					ul.secondary-nav-items
