--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -34,16 +34,16 @@ body.join-page
 					section.i-am
 						| I am a:
 						label.checkbox-wrapper
-							input(type="checkbox", id="scientist", value="scientist" name="i_am_a_scientist")
+							input(type="checkbox", id="scientist", value="true" name="i_am_a_scientist")
 							| Scientist
 						label.checkbox-wrapper
-							input(type="checkbox", id="clinician", value="clinician" name="i_am_a_clinician")
+							input(type="checkbox", id="clinician", value="true" name="i_am_a_clinician")
 							| Clinician
 						label.checkbox-wrapper
-							input(type="checkbox", id="patient_or_family", value="patient_or_family" name="i_am_a_patient_or_family")
+							input(type="checkbox", id="true", value="patient_or_family" name="i_am_a_patient_or_family")
 							| A patient or a family member of a patient
 						label.checkbox-wrapper
-							input(type="checkbox", id="just_interested", value="just_interested" name="i_am_a_just_interested")
+							input(type="checkbox", id="just_interested", value="true" name="i_am_a_just_interested")
 							| Simply interested to learn more
 					section
 						label
@@ -56,22 +56,22 @@ body.join-page
 					section.i-want-to
 						| I would like to:
 						label.checkbox-wrapper
-							input(type="checkbox", id="sign_up_for_email_newsletter", value="sign_up_for_email_newsletter", name="i_would_like_to_sign_up_for_email_newsletter")
+							input(type="checkbox", id="sign_up_for_email_newsletter", value="true", name="i_would_like_to_sign_up_for_email_newsletter")
 							| Sign up for email newsletter
 						label.checkbox-wrapper
-							input(type="checkbox", id="contribute_mri", value="contribute_mri", name="i_would_like_to_contribute_mri")
+							input(type="checkbox", id="contribute_mri", value="true", name="i_would_like_to_contribute_mri")
 							| Contribute MRI data
 						label.checkbox-wrapper
-							input(type="checkbox", id="contribute_behavioral", value="contribute_behavioral", name="i_would_like_to_contribute_behavioral")
+							input(type="checkbox", id="contribute_behavioral", value="true", name="i_would_like_to_contribute_behavioral")
 							| Contribute behavioral data
 						label.checkbox-wrapper
-							input(type="checkbox", id="share_experimental_protocols", value="share_experimental_protocols", name="i_would_like_to_share_experimental_protocols")
+							input(type="checkbox", id="share_experimental_protocols", value="true", name="i_would_like_to_share_experimental_protocols")
 							| Share experimental protocols or materials
 						label.checkbox-wrapper
-							input(type="checkbox", id="post_videos", value="post_videos", name="i_would_like_to_post_videos")
+							input(type="checkbox", id="post_videos", value="true", name="i_would_like_to_post_videos")
 							| Post videos of neuropsychological studies of patients
 						label.checkbox-wrapper
-							input(type="checkbox", id="upload_data", value="upload_data", name="i_would_like_to_upload_data")
+							input(type="checkbox", id="upload_data", value="true", name="i_would_like_to_upload_data")
 							| Upload data from my helmet-worn accelerometer
 					section
 						button.button.green-gradient(type="submit") Join
