--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -40,7 +40,7 @@ body.join-page
 							input(type="checkbox", id="clinician", value="true" name="i_am_a_clinician")
 							| Clinician
 						label.checkbox-wrapper
-							input(type="checkbox", id="true", value="patient_or_family" name="i_am_a_patient_or_family")
+							input(type="checkbox", id="true", value="true" name="i_am_a_patient_or_family")
 							| A patient or a family member of a patient
 						label.checkbox-wrapper
 							input(type="checkbox", id="just_interested", value="true" name="i_am_a_just_interested")
