--- a/src/jade/video-archive/index.jade
+++ b/src/jade/video-archive/index.jade
@@ -13,13 +13,14 @@ body.learn-page.video-archive-page
 				p The Open Brain Project is gathering informative videos that illustrate neuropsychological phenomena. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here.
 	main.page-content
 		section.videos-section
-			.container.videos-list
-				for video in videos
-					a.video-block(href="https://www.youtube.com/watch?v=" + video.video_url)
-						.video-thumbnail(style="background-image: url(" + video.thumbnail_src + ")")
-							.icon-youtube-wrapper
-								+icon("youtube")
-						.video-meta
-							h4.video-title= video.title
-							p.video-description= video.description
+			.container.videos-container
+				.videos-list
+					for video in videos
+						a.video-block(href="https://www.youtube.com/watch?v=" + video.video_url)
+							.video-thumbnail(style="background-image: url(" + video.thumbnail_src + ")")
+								.icon-youtube-wrapper
+									+icon("youtube")
+							.video-meta
+								h4.video-title= video.title
+								p.video-description= video.description
 	+footer()
