--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -150,7 +150,7 @@ body {
 	// 		transparent 70vw,
 	// 		transparent 0
 	// 	);
-	background: linear-gradient($white, shade($white, 5%));
+	// background: linear-gradient($white, shade($white, 5%));
 }
 
 section {
