--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -35,6 +35,7 @@ mixin head(pageTitle, pageDescription)
 			// meta(name="msapplication-TileColor", content="#959ba6")
 			meta(name="rating" content="General")
 			meta(name="mobile-web-app-capable", content="yes")
+			meta(name="google-site-verification", content="YOgvR065o47Z7E6-UDzVZc-Tbc0Th79ThLqpP3tEP7k")
 
 			// Force IE 8/9/10 to use its latest rendering engine
 			meta(http-equiv="x-ua-compatible", content="ie=edge")
