--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,11 +13,10 @@ body.home
 			.wrapper
 				+brain_graphic()
 				.container
-					p The Open Brain Project is a:
-					p.mission-point Consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
-					p.mission-point Meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
-					p.mission-point A hub to connect patients and their families with resources to manage their condition
-					p.mission-point A forum for scientists to share research papers, data, and experimental protocols related to neuropsychological research
+					p.mission-point The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
+					//- p.mission-point Meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
+					//- p.mission-point A hub to connect patients and their families with resources to manage their condition
+					//- p.mission-point A forum for scientists to share research papers, data, and experimental protocols related to neuropsychological research
 		section.featured-content-section
 			.wrapper
 				.featured-content-wrapper 
