remove pubs page

--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -51,9 +51,9 @@ mixin nav()
 						li.nav-item.nav-group.about-group
 							a.nav-link.main-nav-link(href="/about") 
 								span About
-						li.nav-item.nav-group.publications-group
-							a.nav-link.main-nav-link(href="/publications") 
-								span Publications
+						//- li.nav-item.nav-group.publications-group
+						//- 	a.nav-link.main-nav-link(href="/publications") 
+						//- 		span Publications
 						li.nav-item.nav-group.consortium-group
 							a.nav-link.main-nav-link(href="/consortium") 
 								span Consortium
